<resources>
    <string name="app_name">McDoland</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_order">Order</string>
    <string name="title_reward_and_deals">R&amp;D</string>
    <string name="title_code">Code</string>
    <string name="title_more">More</string>
    <string name="opt_in_text">Opt in to MyMcDonald\'s Rewards &amp; Deals</string>
    <string name="learn_more">Learn More</string>
    <string name="continue_to_opt_in">Continue to opt in</string>
    <string name="reward_and_deals_text">MyMcDonald\'s Rewards &amp; Deals</string>
</resources>