<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_the_m"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_the_frys"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_rewards_and_deals"
        android:icon="@drawable/ic_randd"
        android:title="@string/title_reward_and_deals" />

    <item
        android:id="@+id/navigation_code"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_code" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/title_more" />

</menu>